plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'basilium'
version = '0.0.1-SNAPSHOT'

java { sourceCompatibility = '17' }

repositories {
	mavenCentral()
	maven { url 'https://jitpack.io' }
}

ext {
	// Spring Cloud 2023.0.x(= Leyton) — Boot 3.2.x 공식 호환, 최신 패치
	springCloudVersion = "2023.0.6"
}

dependencies {
	// import
	implementation 'com.github.iamport:iamport-rest-client-java:0.2.22'

	// spring
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// DB
	runtimeOnly 'com.mysql:mysql-connector-j'
	runtimeOnly 'com.h2database:h2'

	// Lombok (스코프 표준화)
	compileOnly 'org.projectlombok:lombok:1.18.38'
	annotationProcessor 'org.projectlombok:lombok:1.18.38'

	// JWT (0.12.x 최신)
	implementation 'io.jsonwebtoken:jjwt-api:0.12.4'
	runtimeOnly   'io.jsonwebtoken:jjwt-impl:0.12.4'
	runtimeOnly   'io.jsonwebtoken:jjwt-jackson:0.12.4'
	// 밑에 버전 올리기
	//implementation 'io.jsonwebtoken:jjwt:0.9.1'
	//implementation 'javax.xml.bind:jaxb-api:2.3.1'

	// OpenFeign (버전은 Cloud BOM이 관리)
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

	// AWS (Spring Cloud AWS 3.x, Boot 3.2.x 호환)
	implementation 'io.awspring.cloud:spring-cloud-aws-starter:3.2.1'
	implementation 'software.amazon.awssdk:s3:2.32.17'

	// Batch
	//implementation 'org.springframework.boot:spring-boot-starter-batch'
	implementation "org.springframework.batch:spring-batch-core:5.1.1"

	// Kafka
	implementation 'org.springframework.kafka:spring-kafka'

	// SSE & JSON
	implementation 'com.fasterxml.jackson.core:jackson-databind' // Boot BOM이 버전 관리
	implementation 'com.google.code.gson:gson:2.13.1'

	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

	// Dev
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// p6spy
	implementation 'p6spy:p6spy:3.9.1'
	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.12.0'

	// test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
	systemProperty "spring.profiles.active", "test"
}
